rollouts-demo/base/svc-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-preview
spec:
  selector:
    app: rollouts-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
