rollouts-demo/base/ingress-active.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollouts-active
  namespace: rollouts-demo
spec:
  ingressClassName: nginx
  rules:
    - host: CHANGE-active-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rollouts-active
                port:
                  number: 80
